changed the second header (aka section title) according to new design

--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -82,7 +82,7 @@
             {{ if (eq $.Section "documentation") }}
             <header class="main-header">
             {{ else }}
-            <header class="main-header main-sticky-header">
+            <header class="main-header main-sticky-header{{ if .IsHome }} main-header__home{{ end }}">
             {{ end }}
 
               <!--Header-Upper-->
