--- a/qdrant-landing/themes/qdrant/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/js.html
@@ -99,3 +99,12 @@
     });
   });
 </script>
+
+{{ if eq .Section "documentation" }}
+<script defer src="/js/qdrant-page-search/search.min.js" type="module"></script>
+<script defer>
+  window.addEventListener('DOMContentLoaded', () => {
+    initQdrantSearch({searchApiUrl: 'https://gist.githubusercontent.com/generall/1caf4639b62d1014d216f4b7b5027b83/raw/b8e052e45067241fa79be647e3b23d60577363f2/qdrant-docs-search-example.json'});
+  });
+</script>
+{{ end }}
