WIP: added some webpack configuration for updating a way of vendors scripts usage, added new carousel

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -121,6 +121,29 @@ docker run -p 6333:6333 qdrant/qdrant</code>
 
   <section class="business-section-two">
     <div class="auto-container">
+
+<!--      todo: example -->
+<!--    <section class="splide" aria-label="Splide Basic HTML Example"-->
+<!--      data-splide='{"direction": "ttb",-->
+<!--       "type": "slide",-->
+<!--       "height": 618,-->
+<!--       "loop": true,-->
+<!--       "autoplay": true,-->
+<!--       "interval": 3000,-->
+<!--       "pagination": true,-->
+<!--       "pauseOnHover": true,-->
+<!--       "arrows":  false,-->
+<!--       "paginationDirection": "ttb"}'>-->
+<!--        <div class="splide__track">-->
+<!--          <ul class="splide__list">-->
+<!--            <li class="splide__slide">Slide 01</li>-->
+<!--            <li class="splide__slide">Slide 02</li>-->
+<!--            <li class="splide__slide">Slide 03</li>-->
+<!--          </ul>-->
+<!--        </div>-->
+<!--      </section>-->
+
+
       <!-- Sec Title -->
       <div class="sec-title">
         <h2>{{ .Params.section_title | safeHTML }}</h2>
