--- a/qdrant-landing/themes/qdrant/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/js.html
@@ -1,8 +1,6 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script src="{{ "js/jquery.js" | absURL }}"></script>
-<script src="{{ "js/popper.min.js" | absURL }}"></script>
 <script src="{{ "js/jquery.scrollTo.js" | absURL }}"></script>
-<script src="{{ "js/bootstrap.min.js" | absURL }}"></script>
 <script src="{{ "js/jquery.mCustomScrollbar.concat.min.js" | absURL }}"></script>
 <script src="{{ "js/jquery.fancybox.js" | absURL }}"></script>
 <script src="{{ "js/appear.js" | absURL }}"></script>
@@ -17,6 +15,7 @@
 <!-- <script src="{{ "js/wow.js" | absURL }}"></script> -->
 <!-- <script src="{{ "js/jquery-ui.js" | absURL }}"></script> -->
 <!-- <script src="{{ "js/element-in-view.js" | absURL }}"></script> -->
+<script src="{{ "js/vendor.min.js" | absURL }}"></script>
 <script src="{{ "js/script.js" | absURL }}"></script>
 <script src="{{ "js/clipboard.min.js" | absURL }}"></script>
 <script src="{{ "js/anchor.min.js" | absURL }}"></script>
