--- a/qdrant-landing/themes/qdrant/static/css/blocks/business-section-two.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/business-section-two.scss
@@ -78,6 +78,7 @@
       .tab {
         display: block;
         position: relative;
+        transform: none;
         @include media-breakpoint-up(lg) {
           display: none;
           transform: rotateY(90deg);
