fix for the slider

--- a/qdrant-landing/themes/qdrant/static/css/blocks/business-section-two.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/business-section-two.scss
@@ -82,7 +82,10 @@
 
     .content {
       display: flex;
-      height: 618px;
+
+      @include media-breakpoint-up(lg) {
+        height: 618px;
+      }
 
       .content-column {
         display: flex;
