--- a/qdrant-landing/themes/qdrant/static/css/blocks/business-section-two.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/business-section-two.scss
@@ -39,7 +39,7 @@
       margin: 7px 0;
       cursor: pointer;
       border-radius: 50%;
-      background: var(--brand-mid-grey);
+      background: var(--brand-light-grey);
 
       &:hover {
         background: var(--brand-gray);
