--- a/qdrant-landing/themes/qdrant/static/css/colors.css
+++ b/qdrant-landing/themes/qdrant/static/css/colors.css
@@ -5,7 +5,8 @@
   --brand-secondary: #24386C;
   --brand-dark-gray: #7589BE;
   --brand-gray: #B2BFE8;
-  --brand-mid-grey: #EBF1FF;
-  --brand-light-gray: #F4F6FF;
+  --brand-mid-grey: #D9E2FF;
+  --brand-light-grey: #EBF1FF;
+  --brand-light: #F4F6FF;
 
 }
