--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -227,10 +227,9 @@ docker run -p 6333:6333 qdrant/qdrant</code>
   <!--End Clients Section-->
   {{ end }}
 
-
   {{ with (.Site.GetPage "section" "articles") }}
-  <!-- End Articles Section -->
-  <section id="articles" class="projects-section-two" style="background: var(--brand-light-gray);">
+  <!-- Start Articles Section -->
+  <section id="articles" class="projects-section-two" style="background: var(--brand-light);">
     <div class="auto-container">
       <!-- Sec Title -->
       <div class="sec-title mb-4">
@@ -242,27 +241,9 @@ docker run -p 6333:6333 qdrant/qdrant</code>
 
         {{ range $i, $e := first 3 .Pages }}
 
-        {{ $link := .Permalink }}
-        {{ if .Params.external_link }}
-          {{ $link = .Params.external_link }}
-        {{ end }}
 
         <!-- Project Block -->
-        <div class="project-block col-lg-4 col-md-6 col-sm-12">
-          <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
-            <div class="block-content">
-              <div class="image">
-                <a href="{{ $link }}" target="_blank"><img src="{{ .Params.preview_image }}" alt=""/></a>
-              </div>
-              <div class="lower-content">
-                <h5><a href="{{ $link }}">{{ .Title }}</a></h5>
-                <div class="text">{{ .Params.description }}
-                </div>
-                <a href="{{ $link }}" target="_blank" class="theme-btn btn-style-five"><span class="txt">Learn More</span></a>
-              </div>
-            </div>
-          </div>
-        </div>
+        {{ partial "article-card" (dict "context" . "classes" "") }}
         {{ end }}
 
       </div>
@@ -271,34 +252,5 @@ docker run -p 6333:6333 qdrant/qdrant</code>
   <!-- End Articles Section -->
 
   {{ end }}
-
-  <!-- Contact Form Section -->
-  <section class="clients-section contact-section">
-    <div class="auto-container">
-      <div class="row">
-        <div class="col-12 sec-title">
-          <h2>Get Updates from Qdrant</h2>
-          <div class="text">We will update you on new features and news regarding Qdrant
-          </div>
-        </div>
-        <div class="content-column col-12">
-          <!-- Newsletter Form -->
-          <div class="newsletter-form">
-            <form action="{{ .Site.Params.mailchimp_subscribe }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div class="d-flex justify-content-between flex-wrap">
-                <input type="email" name="EMAIL" value="" placeholder="Enter Your Email" required="" id="mce-EMAIL">
-                <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                  <input type="text" name="{{ .Site.Params.mailchimp_subscribe_id }}" tabindex="-1" value="">
-                </div>
-                <button type="submit" class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive"><span class="txt">Subscribe</span>
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End of Contact Section -->
 
 {{ partial "footer" . }}
