--- a/qdrant-landing/themes/qdrant/static/css/article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/article.scss
@@ -66,13 +66,13 @@ article:first-of-type {
   }
 
   ul > li {
-    margin: 0 0 0 2em;
+    margin: 0 0 0 19px;
     position: relative;
     list-style: disc;
   }
 
   ol > li {
-    margin: 0 0 0 2em;
+    margin: 0 0 0 19px;
     position: relative;
     list-style: decimal;
   }
@@ -194,8 +194,47 @@ article:first-of-type {
   line-height: 34px;
   font-weight: 400;
   font-family: $font-family-content;
+
   p, span, ul, ol, li {
     font: inherit;
+  }
+
+  h1, h2, h3, h4, h5 {
+    font-family: $font-family-non-content;
+    font-style: normal;
+    font-weight: 700;
+    margin-bottom: 24px;
+  }
+
+  h1 {
+    font-size: 40px;
+    line-height: 48px;
+  }
+
+  h2 {
+    font-size: 28px;
+    line-height: 33px;
+  }
+
+  ul, ol {
+    margin-left: 0;
+  }
+
+  li {
+    margin-left: 0;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    border-radius: 14px;
+  }
+
+  figcaption {
+    font-style: italic;
+    font-size: 22px;
+    line-height: 34px;
   }
 
   &__info {
@@ -206,6 +245,21 @@ article:first-of-type {
     line-height: 17px;
     color: var(--brand-dark-gray);
     margin-bottom: 24px;
+  }
+
+  &__cover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    border-radius: 14px;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
   }
 
   /* border bottom */
@@ -239,29 +293,22 @@ article:first-of-type {
 }
 
 .article {
-  padding-top: 18px;
-  //padding-right: 180px;
-  //padding-left: 180px;
+  //padding-top: 38px;
 
-  @media only screen and (max-width: 599px) {
-    padding-right: 0;
-    padding-left: 0;
-  }
+  //@media only screen and (max-width: 599px) {
+  //  padding-right: 0;
+  //  padding-left: 0;
+  //}
+  //
+  //@media only screen and (max-width: 1023px) {
+  //  padding-right: 10px;
+  //  padding-left: 10px;
+  //}
+  //
+  //@include media-breakpoint-up(md) {
+  //  padding-top: 38px;
+  //}
 
-  @media only screen and (max-width: 1023px) {
-    padding-right: 10px;
-    padding-left: 10px;
-  }
-
-  @include media-breakpoint-up(md) {
-    padding-top: 38px;
-  }
-
-  h1, h2, h3, h4, h5 {
-    font-family: $font-family-non-content;
-    font-style: normal;
-    font-weight: 700;
-  }
 
 }
 
