--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -4,14 +4,16 @@
         <!-- Content Side -->
         <section class="col-lg-12 col-md-12 col-sm-12">
             {{ .Scratch.Set "scope" "single" }}
-            <div class="article__cover mt-5 mb-3">
-                <img src="{{ .Params.preview_image }}">
-            </div>
-            {{ partial "breadcrumbs" . }}
             <article class="article">
+                <div class="article__cover mt-5 mb-3">
+                    <img src="{{ .Params.preview_image }}">
+                </div>
+                {{ partial "breadcrumbs" . }}
                 <h1>{{ .Title }}</h1>
                 {{ .Content }}
             </article>
+            {{ partial "author" . }}
+            <div class="article__info">{{ .Date | time.Format ":date_long" }}</div>
         </section>
     </div>
 </div>
