renamed and added some files, added fixes to breadcrumbs

--- a/qdrant-landing/themes/qdrant/layouts/partials/breadcrumbs.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/breadcrumbs.html
@@ -1,4 +1,4 @@
-<ul class="breadcrumbs clearfix">
+<ul class="breadcrumbs">
     <li class="breadcrumbs__crumb"><a href="/"><i class="flaticon-home small"></i> Home</a></li>
     {{ $paths := (split .RelPermalink "/") }}
     {{ $len := sub (len $paths) 2 }}
