--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -51,8 +51,8 @@
 
 @import "reset";
 
-@import "blocks/list-style-one";
-@import "blocks/social-icon";
+//@import "blocks/list-style-one";
+//@import "blocks/social-icon";
 @import "blocks/scroll-to-top";
 @import "blocks/sec-title";
 
