--- a/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
@@ -3,17 +3,7 @@
     <div class="auto-container">
         <div class="row">
             <div class="col-12 col-md-6 order-1 order-md-0">
-                <ul class="breadcrumbs clearfix">
-                    <li><a href="/"><i class="flaticon-home small"></i> Home</a></li>
-                    {{ $paths := (split .RelPermalink "/") }}
-                    {{ $len := sub (len $paths) 2 }}
-                    {{ range first $len $paths }}
-                    {{ if gt (len . ) 0 }}
-                    / <li><a href="/{{ . }}">{{ humanize . }}</a></li>
-                    {{ end }}
-                    {{ end }}
-                    / <li>{{ .Params.title | safeHTML }}</li>
-                </ul>
+                {{ partial "breadcrumbs" . }}
 
                 <h1> {{ .Params.title | safeHTML }}</h1>
                <h2>{{ .Params.section_title | safeHTML }}</h2>
