small changes in styles and layouts

--- a/qdrant-landing/themes/qdrant/layouts/partials/breadcrumbs.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/breadcrumbs.html
@@ -4,10 +4,10 @@
     {{ $len := sub (len $paths) 2 }}
     {{ range first $len $paths }}
     {{ if gt (len . ) 0 }}
-    /
+    &nbsp;/&nbsp;
     <li class="breadcrumbs__crumb"><a href="/{{ . }}">{{ humanize . }}</a></li>
     {{ end }}
     {{ end }}
-    /
+    &nbsp;/&nbsp;
     <li class="breadcrumbs__crumb">{{ .Params.title | safeHTML }}</li>
 </ul>
