--- a/qdrant-landing/themes/qdrant/static/css/blocks/_button.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_button.scss
@@ -6,7 +6,7 @@
     position: relative;
     border: 0;
     border-radius: 32px;
-    background: var(--white);
+    background: transparent;
     box-shadow: inset 0 0 0 1px var(--brand-primary);
     overflow: hidden;
 
