--- a/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
@@ -5,8 +5,8 @@
             <div class="col-12 col-md-6 order-1 order-md-0">
                 {{ partial "breadcrumbs" . }}
 
-                <h1> {{ .Params.title | safeHTML }}</h1>
-               <h2>{{ .Params.section_title | safeHTML }}</h2>
+                <h1 class="page-title__title{{ if not .Params.section_title }} page-title__title_dark{{ end }}"> {{ .Params.title | safeHTML }}</h1>
+                <h2 class="page-title__subtitle">{{ .Params.section_title | safeHTML }}</h2>
             </div>
             <div class="col-12 col-md-6 order-0 order-md-1 mb-5 mb-md-0">
                 <img src="{{ .Params.img }}" alt="">
