--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -1,19 +1,21 @@
 {{ partial "header" . }}
-<div class="auto-container pt-3 pt-md-5 mb-5">
+<div class="auto-container pt-3 pt-md-2 mb-5">
     <div class="row clearfix">
         <!-- Content Side -->
         <section class="col-lg-12 col-md-12 col-sm-12">
             {{ .Scratch.Set "scope" "single" }}
-            <article class="article">
-                <div class="article__cover mt-5 mb-3">
+            <article class="article article_bb mb-4">
+                <div class="article__cover mt-5 mb-4">
                     <img src="{{ .Params.preview_image }}">
                 </div>
                 {{ partial "breadcrumbs" . }}
                 <h1>{{ .Title }}</h1>
                 {{ .Content }}
             </article>
-            {{ partial "author" . }}
-            <div class="article__info">{{ .Date | time.Format ":date_long" }}</div>
+            <ul class="pt-3">
+                {{ partial "author" . }}
+                <li class="article__info mt-4">{{ .Date | time.Format ":date_long" }}</li>
+            </ul>
         </section>
     </div>
 </div>
