--- a/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
@@ -116,10 +116,10 @@ article aside[role="status"]:before {
 
 .article,
 .blog {
-  font-size: 22px;
-  line-height: 34px;
-  font-weight: 400;
   font-family: $font-family-content;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 34px;
 
   @include content-reset;
 
@@ -127,11 +127,15 @@ article aside[role="status"]:before {
     font: inherit;
   }
 
+  p, ul {
+    margin-bottom: 2rem;
+  }
+
   h1, h2, h3, h4, h5 {
-    font-family: $font-family-non-content;
-    font-style: normal;
-    font-weight: 700;
     margin-bottom: 24px;
+    font-family: $font-family-non-content;
+    font-weight: 700;
+    font-style: normal;
   }
 
   h1 {
@@ -160,19 +164,19 @@ article aside[role="status"]:before {
   }
 
   figcaption {
-    font-style: italic;
     font-size: 22px;
+    font-style: italic;
     line-height: 34px;
   }
 
   &__info {
-    font-family: $font-family-non-content;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: var(--brand-dark-gray);
     margin-bottom: 24px;
+    color: var(--brand-dark-gray);
+    font-family: $font-family-non-content;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 17px;
   }
 
   &__cover {
@@ -181,8 +185,8 @@ article aside[role="status"]:before {
     justify-content: center;
     width: 100%;
     height: 300px;
-    overflow: hidden;
     border-radius: 14px;
+    overflow: hidden;
 
     img {
       width: 100%;
@@ -197,24 +201,30 @@ article aside[role="status"]:before {
 }
 
 .article-title {
-  font-size: 40px;
   display: flex;
-  line-height: 48px;
+  align-items: center;
+  margin-bottom: 14px;
   color: var(--brand-secondary);
-  margin-bottom: 24px;
+
+  & > h1, & > h2, &> h3 {
+    margin-bottom: 0;
+    font-size: 40px;
+    line-height: 48px;
+  }
 
   &__image {
     display: block;
     width: 56px;
     height: 56px;
-    overflow: hidden;
-    text-align: center;
     margin-right: 12px;
+    text-align: center;
     border-radius: 14px;
+    overflow: hidden;
 
     img {
       width: auto;
       height: 56px;
+      object-fit: cover;
     }
   }
 
