--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -51,8 +51,6 @@
 
 @import "reset";
 
-//@import "blocks/list-style-one";
-//@import "blocks/social-icon";
 @import "blocks/scroll-to-top";
 @import "blocks/sec-title";
 
@@ -102,7 +100,7 @@
 @import "blocks/widget-header";
 @import "blocks/post-preview";
 @import "blocks/steps-form";
-@import "article";
+@import "blocks/article";
 @import "blocks/blog";
 @import "blocks/article-card";
 @import "blocks/breadcrumbs";
